# WPN114-synthesis

./: CMakeLists.txt  README.md  qml_plugin.cpp  wpn114-synthesis.pri  wpn114-synthesis.pro
qml/: qmldir  synthesis.qmltypes
source/ashes/: ashes.hpp
source/pinknoise/: pinknoise.cpp  pinknoise.hpp
